         | C   C  O   O  NN  N  Q   Q  U   U  E      S        T   |
         | C      O   O  N N N  Q   Q  U   U  EEE     SSS     T   |
         | C   C  O   O  N  NN  Q  Q   U   U  E          S    T   |
         |  CCC    OOO   N   N   QQ Q   UUU   EEEEE  SSSS     T   |
         +--------------------------------------------------------+

                              Conquest HISTORY

???    - patch from Clint Adams, putting the manpages in their proper
         place (section 6 rather than 1)

8.1.2g (devel) 7/16/2006

       - add 'Hull Critical' and 'Shields Critical' pulse messages to
         viewer.  Remove icon sh/hull critical texture decals.

       - server fix: propagate SHIP_F_REPAIR flag for ships other than
         your own that are within scanning range so that shield status
         is accurate when repairing.

       - added man pages for conqdriv, conqmetad, conqoper,
         conquest/conquestgl (one manpage for both), conquestd, and
         conquestsh.

         These will be beefed up more in the future from info in the
         README and other files.

       8.1.2f (devel - not publically released)

       - fixed bug with mouse macros and angles that would cause the
         computed angle to be off by a few degrees depending on where
         you clicked.

       - Engine/weapon critical alerts now pulsed in viewer.  Got rid
         of iconhud eng/wep critical decal textures.

       - added 'Fuel Critical' alert pulse in viewer when fuel is < 100.

       - 'alert bars' are gone.  In their place are torp status pips,
         indicating torpedo status for each torp (left), and a
         vertical phaser status gauge, indicating phaser recharge
         state (right).

         Torp pip colors:
              Green - ready to fire
              White - in flight
              Red   - exploding
         
         Phaser recharge:
              Green - ready to fire
              Red   - recharging
