@@ -1,0 +1,54 @@
+.\" $Id$
+.TH "CONQAI" "6" 
+.SH "NAME" 
+conqai \(em Conquest AI override program 
+.SH "SYNOPSIS" 
+.PP 
+\fBconqai\fP [\fB-r\fP]  
+.SH "DESCRIPTION" 
+.PP 
+This manual page documents briefly the 
+\fBconqai\fP command. 
+.PP 
+This manual page was written for the \fBDebian\fP distribution 
+because the original program does not have a manual page. 
+Instead, it has documentation in plain text format; see below. 
+.PP 
+\fBconqai\fP is a program that allows 
+suitably privileged individuals to take over robot control from the 
+Conquest driver, for debugging purposes. 
+.PP 
+The root user is always a Conquest Operator (CO) and therefore 
+can run the conqoper program.  If you want to allow other people to 
+be CO's, you will need to add them to the conquest group. 
+ 
+.SH "OPTIONS" 
+.IP "\fB-r\fP         " 10 
+Return control of the robots to the Conquest driver.  Be sure to do
+this after you are finished running conqai to debug the AI, otherwise
+the robots won't do anything but sit there.
+.SH "SEE ALSO" 
+.PP 
+conquest (6), conqoper (6), conqstrat (6). 
+.PP 
+The programs are documented in text files present in 
+/usr/share/doc/conquest/ . 
+.SH "AUTHOR" 
+.PP 
+This manual page was written by Clint Adams <schizo@debian.org> for 
+the \fBDebian\fP system (but may be used by others).  Permission is 
+granted to copy, distribute and/or modify this document under 
+the terms of the GNU GPL.  Conquest is 
+.PP
+Copyright (C)1994-2006 by Jon Trulson <jon@radscan.com> under the
+ARTISTIC License.
+.PP
+Original VAX/VMS Ratfor Conquest:
+.PP
+Copyright (C)1983-1986 by Jef Poskanzer and Craig Leres.  Permission to
+use, copy, modify, and distribute this software and its documentation
+for any purpose and without fee is hereby granted, provided that this
+copyright notice appear in all copies and in all supporting
+documentation. Jef Poskanzer and Craig Leres make no representations
+about the suitability of this software for any purpose. It is provided
+"as is" without express or implied warranty.
