@@ -1,5 +1,5 @@
 .\" $Id$
-.TH "conqmetad" 1 "" ""
+.TH "conqmetad" 6 "" ""
 .SH NAME
 conqmetad \- a Conquest Meta server
 .SH SYNOPSIS
@@ -36,8 +36,8 @@ Run as user \fIuser\fP.
 Jon Trulson
 .SH "SEE ALSO"
 .PP
-conquest(1), conquestd(1), conqoper(1), conqdriv(1), conquestsh(1),
-conqmetad(1) 
+conquest(6), conquestd(6), conqoper(6), conqdriv(6), conquestsh(6),
+conqmetad(6) 
 .PP
 See README in the conquest distribution (usually installed in
 <conquest install prefix>/etc/) for information and tips on how to
