@@ -1,5 +1,5 @@
 .\" $Id$
-.TH "conquestd" 1 "" ""
+.TH "conquestd" 6 "" ""
 .SH NAME
 conquestd \- a Conquest game server
 .SH SYNOPSIS
@@ -68,8 +68,8 @@ server.
 Jon Trulson
 .SH "SEE ALSO"
 .PP
-conquest(1), conquestd(1), conqoper(1), conqdriv(1), conquestsh(1),
-conqmetad(1) 
+conquest(6), conquestd(6), conqoper(6), conqdriv(6), conquestsh(6),
+conqmetad(6) 
 .PP
 See README in the conquest distribution (usually installed in
 <conquest install prefix>/etc/) for information and tips on how to
