@@ -1,5 +1,5 @@
 .\" $Id: conqmetad.man 551 2006-07-17 04:43:10Z jon $
-.TH "conquestsh" 1 "" ""
+.TH "conquestsh" 6 "" ""
 .SH NAME
 conquestsh \- a Conquest shell for telnet players
 .SH SYNOPSIS
@@ -23,8 +23,8 @@ your tastes.
 Jon Trulson
 .SH "SEE ALSO"
 .PP
-conquest(1), conquestd(1), conqoper(1), conqdriv(1), conquestsh(1),
-conqmetad(1) 
+conquest(6), conquestd(6), conqoper(6), conqdriv(6), conquestsh(6),
+conqmetad(6) 
 .PP
 See README in the conquest distribution (usually installed in
 <conquest install prefix>/etc/) for information and tips on how to
